feat: v6 模块化copy_demo
